# ParticleLife_Py

./: .gitignore  README.md  main.py  particles.py  pyproject.toml  requirements.txt  scratch.py
particlelife/: __init__.py  atoms.py  clusters.py  opencl_utils.py  settings.py  simulation.py  ui.py  utils.py
particlelife/data/: theme.json
