[project]
name = "particlelife-py"
version = "0.1.0"
description = "Simple particle simulation based on attraction and repulsion, built with pygame-ce."
authors = [
    {name = "RPINerd"},
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "imageio>=2.37.0",
    "imageio-ffmpeg>=0.6.0",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pygame-ce>=2.5.3",
    "pygame-gui>=0.6.13",
]
