[project]
name = "particlelife-py"
version = "0.2.0"
description = "Simple particle simulation based on attraction and repulsion, built with pygame-ce."
authors = [
    {name = "RPINerd"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pygame-ce>=2.5.3",
    "pygame-gui>=0.6.13",
    "taichi>=1.7.3",
]
